[package]
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
categories = ["games"]
description = "Padre Pio Discord bot"
edition = "2021"
homepage = "https://github.com/veeso/padrepio-bot"
include = ["src/**/*", "LICENSE", "README.md"]
keywords = ["discord", "discord-bot", "padre-pio"]
license = "MIT"
name = "padrepio-discord-bot"
readme = "README.md"
repository = "https://github.com/veeso/padrepio-bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
chatgpt_rs = "^1.1"
chrono = "^0.4"
futures = "^0.3"
log = "^0.4"
rand = "^0.8.5"
serenity = { version = "^0.11", default-features = false, features = [
  "client",
  "gateway",
  "rustls_backend",
  "model",
] }
tokio = { version = "^1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "^0.3"
url = "^2.3"
